--- a/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
+++ b/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
@@ -5,11 +5,16 @@ corpus_path: collections/msmarco/msmarco-passage-cos-dpr-distil/
 download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cos-dpr-distil.tar
 download_checksum: e20ffbc8b5e7f760af31298aefeaebbd
 
-index_path: indexes/lucene-hnsw.msmarco-passage-cos-dpr-distil/
+index_path: indexes/lucene-index.msmarco-passage-cos-dpr-distil.lexlsh-600/
+index_type: inverted-dense
 collection_class: JsonDenseVectorCollection
-generator_class: LuceneDenseVectorDocumentGenerator
+generator_class: InvertedDenseVectorDocumentGenerator
 index_threads: 16
-index_options: -M 16 -efC 100
+index_options: -encoding lexlsh -lexlsh.b 600
+index_stats:
+  documents: 8841823
+  documents (non-empty): 8841823
+  total terms: 5305093800
 
 metrics:
   - metric: AP@1000
@@ -43,21 +48,22 @@ metrics:
 
 topic_reader: JsonIntVector
 topics:
-  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
-    id: dl20
-    path: topics.dl20.cos-dpr-distil.jsonl.gz
-    qrel: qrels.dl20-passage.txt
+  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl19
+    path: topics.dl19-passage.cos-dpr-distil.jsonl.gz
+    qrel: qrels.dl19-passage.txt
 
 models:
-  - name: cos-dpr-distil
-    display: cosDPR-distil
-    params: -querygenerator VectorQueryGenerator -topicfield vector -threads 16 -hits 1000 -efSearch 1000
+  - name: cos-dpr-distil-lexlsh-600
+    display: cosDPR-distill
+    type: inverted-dense
+    params: -topicfield vector -encoding lexlsh -lexlsh.b 600 -hits 1000
     results:
       AP@1000:
-        - 0.482
+        - 0.4118
       nDCG@10:
-        - 0.701
+        - 0.6716
       R@100:
-        - 0.712
+        - 0.5545
       R@1000:
-        - 0.843
+        - 0.7610
