--- a/src/main/resources/regression/dl20-passage-cos-dpr-distil-hnsw-onnx.yaml
+++ b/src/main/resources/regression/dl20-passage-cos-dpr-distil-hnsw-onnx.yaml
@@ -6,10 +6,11 @@ download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cos-dpr-
 download_checksum: e20ffbc8b5e7f760af31298aefeaebbd
 
 index_path: indexes/lucene-hnsw.msmarco-passage-cos-dpr-distil/
+index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: LuceneDenseVectorDocumentGenerator
 index_threads: 16
-index_options: -M 16 -efC 100 -encoder CosDprDistil
+index_options: -M 16 -efC 100
 
 metrics:
   - metric: AP@1000
@@ -43,21 +44,22 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2020.html)"
-    id: dl19
-    path: topics.dl19-passage.txt
-    qrel: qrels.dl19-passage.txt
+  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.txt
+    qrel: qrels.dl20-passage.txt
 
 models:
-  - name: cos-dpr-distil
+  - name: cos-dpr-distil-hnsw
     display: cosDPR-distil
+    type: hnsw
     params: -querygenerator VectorQueryGenerator -topicfield title -threads 16 -hits 1000 -efSearch 1000 -encoder CosDprDistil
     results:
       AP@1000:
-        - 0.458
+        - 0.482
       nDCG@10:
-        - 0.717
+        - 0.701
       R@100:
-        - 0.605
+        - 0.712
       R@1000:
-        - 0.805
+        - 0.843
