--- a/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-onnx.yaml
+++ b/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-onnx.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-passage-openai-ada2
-corpus_path: collections/msmarco/msmarco-passage-openai-ada2/
+corpus: msmarco-passage-cos-dpr-distil
+corpus_path: collections/msmarco/msmarco-passage-cos-dpr-distil/
 
-download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-openai-ada2.tar
-download_checksum: a4d843d522ff3a3af7edbee789a63402
+download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cos-dpr-distil.tar
+download_checksum: e20ffbc8b5e7f760af31298aefeaebbd
 
-index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2/
+index_path: indexes/lucene-hnsw.msmarco-passage-cos-dpr-distil/
 index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: LuceneDenseVectorDocumentGenerator
 index_threads: 16
-index_options: -M 16 -efC 100 -memorybuffer 65536
+index_options: -M 16 -efC 100 
 
 metrics:
   - metric: AP@1000
@@ -42,24 +42,24 @@ metrics:
     metric_precision: 4
     can_combine: false
 
-topic_reader: JsonIntVector
+topic_reader: TsvInt
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
     id: dev
-    path: topics.msmarco-passage.dev-subset.openai-ada2.jsonl.gz
+    path: topics.msmarco-passage.dev-subset.txt
     qrel: qrels.msmarco-passage.dev-subset.txt
 
 models:
-  - name: openai-ada2
-    display: OpenAI-ada2
+  - name: cos-dpr-distil-hnsw
+    display: cosDPR-distil
     type: hnsw
-    params: -querygenerator VectorQueryGenerator -topicfield vector -threads 16 -hits 1000 -efSearch 1000
+    params: -querygenerator VectorQueryGenerator -topicfield title -threads 16 -hits 1000 -efSearch 1000 -encoder CosDprDistil
     results:
       AP@1000:
-        - 0.350
+        - 0.393
       RR@10:
-        - 0.343
+        - 0.388
       R@100:
-        - 0.898
+        - 0.903
       R@1000:
-        - 0.985
+        - 0.974
