--- a/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
+++ b/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
@@ -57,7 +57,7 @@ models:
   - name: cos-dpr-distil-lexlsh-600
     display: cosDPR-distill
     type: inverted-dense
-    params: -topicField vector -encoding lexlsh -lexlsh.b 600 -hits 1000
+    params: -topicField vector -threads 16 -encoding lexlsh -lexlsh.b 600 -hits 1000
     results:
       AP@1000:
         - 0.4118
