--- a/pom.xml
+++ b/pom.xml
@@ -160,16 +160,8 @@
                <id>ExtractTopDfTerms</id>
             </program>
             <program>
-              <mainClass>io.anserini.index.IndexInvertedDenseVectors</mainClass>
-              <id>IndexVectors</id>
-            </program>
-            <program>
-              <mainClass>io.anserini.search.SearchInvertedDenseVectors</mainClass>
-              <id>ApproximateNearestNeighborSearch</id>
-            </program>
-            <program>
-              <mainClass>io.anserini.search.EvaluateInvertedDenseVectors</mainClass>
-              <id>ApproximateNearestNeighborEval</id>
+              <mainClass>io.anserini.eval.TrecEval</mainClass>
+              <id>TrecEval</id>
             </program>
           </programs>
         </configuration>
@@ -485,6 +477,11 @@
       <groupId>ai.djl</groupId>
       <artifactId>api</artifactId>
       <version>0.21.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
     </dependency>
   </dependencies>
 </project>
