--- a/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-int8.yaml
+++ b/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-int8.yaml
@@ -10,7 +10,7 @@ index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: HnswDenseVectorDocumentGenerator
 index_threads: 16
-index_options: -M 16 -efC 100 -memoryBuffer 65536 -quantize.int8
+index_options: -M 16 -efC 100 -memoryBuffer 65536 -noMerge -quantize.int8
 
 metrics:
   - metric: AP@1000
