--- a/src/main/resources/docgen/templates/dl20-passage-openai-ada2-int8.template
+++ b/src/main/resources/docgen/templates/dl20-passage-openai-ada2-int8.template
@@ -60,6 +60,8 @@ Upon completion, we should have an index with 8,841,823 documents.
 
 Note that here we are explicitly using Lucene's `NoMergePolicy` merge policy, which suppresses any merging of index segments.
 This is because merging index segments is a costly operation and not worthwhile given our query set.
+Furthermore, we are using Lucene's [Automatic Byte Quantization](https://www.elastic.co/search-labs/blog/articles/scalar-quantization-in-lucene) feature, which increase the on-disk footprint of the indexes since we're storing both the int8 quantized vectors and the float32 vectors, but only the int8 quantized vectors need to be loaded into memory.
+See [issue #2292](https://github.com/castorini/anserini/issues/2292) for some experiments reporting the performance impact.
 
 ## Retrieval
 
