--- a/src/main/resources/docgen/templates/msmarco-passage-cos-dpr-distil-hnsw-onnx.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-cos-dpr-distil-hnsw-onnx.template
@@ -6,7 +6,7 @@ This page describes regression experiments, integrated into Anserini's regressio
 
 > Xueguang Ma, Tommaso Teofili, and Jimmy Lin. [Anserini Gets Dense Retrieval: Integration of Lucene's HNSW Indexes.](https://dl.acm.org/doi/10.1145/3583780.3615112) _Proceedings of the 32nd International Conference on Information and Knowledge Management (CIKM 2023)_, October 2023, pages 5366–5370, Birmingham, the United Kingdom.
 
-In these experiments, we are using pre-encoded queries (i.e., cached results of query encoding).
+In these experiments, we are performing query inference "on-the-fly" with ONNX.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
@@ -53,8 +53,10 @@ ${index_cmds}
 ```
 
 The path `/path/to/${corpus}/` should point to the corpus downloaded above.
-
 Upon completion, we should have an index with 8,841,823 documents.
+
+Note that here we are explicitly using Lucene's `NoMergePolicy` merge policy, which suppresses any merging of index segments.
+This is because merging index segments is a costly operation and not worthwhile given our query set.
 
 ## Retrieval
 
@@ -66,6 +68,8 @@ After indexing has completed, you should be able to perform retrieval as follows
 ```bash
 ${ranking_cmds}
 ```
+
+Note that we are performing query inference "on-the-fly" with ONNX in these experiments.
 
 Evaluation can be performed using `trec_eval`:
 
