--- a/src/main/resources/docgen/templates/dl19-passage-cos-dpr-distil-hnsw-int8.template
+++ b/src/main/resources/docgen/templates/dl19-passage-cos-dpr-distil-hnsw-int8.template
@@ -1,10 +1,10 @@
-# Anserini Regressions: TREC 2020 Deep Learning Track (Passage)
+# Anserini Regressions: TREC 2019 Deep Learning Track (Passage)
 
-**Model**: OpenAI-ada2 embeddings (using pre-encoded queries) with HNSW indexes
+**Model**: cosDPR-distil with HNSW indexes (using pre-encoded queries)
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, using OpenAI-ada2 embeddings on the [TREC 2020 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2019.html), as described in the following paper:
+This page describes regression experiments, integrated into Anserini's regression testing framework, using the cosDPR-distil model on the [TREC 2019 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2019.html), as described in the following paper:
 
-> Jimmy Lin, Ronak Pradeep, Tommaso Teofili, and Jasper Xian. [Vector Search with OpenAI Embeddings: Lucene Is All You Need.](https://arxiv.org/abs/2308.14963) _arXiv:2308.14963_, 2023.
+> Xueguang Ma, Tommaso Teofili, and Jimmy Lin. [Anserini Gets Dense Retrieval: Integration of Lucene's HNSW Indexes.](https://dl.acm.org/doi/10.1145/3583780.3615112) _Proceedings of the 32nd International Conference on Information and Knowledge Management (CIKM 2023)_, October 2023, pages 5366–5370, Birmingham, the United Kingdom.
 
 In these experiments, we are using pre-encoded queries (i.e., cached results of query encoding).
 
@@ -20,7 +20,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the MS MARCO Passage Corpus that has already been encoded with the OpenAI-ada2 embedding model.
+We make available a version of the MS MARCO Passage Corpus that has already been encoded with cosDPR-distil.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
@@ -39,7 +39,7 @@ wget ${download_url} -P collections/
 tar xvf collections/${corpus}.tar -C collections/
 ```
 
-To confirm, `${corpus}.tar` is 109 GB and has MD5 checksum `${download_checksum}`.
+To confirm, `${corpus}.tar` is 57 GB and has MD5 checksum `${download_checksum}`.
 With the corpus downloaded, the following command will perform the remaining steps below:
 
 ```bash
@@ -60,12 +60,14 @@ Upon completion, we should have an index with 8,841,823 documents.
 
 Note that here we are explicitly using Lucene's `NoMergePolicy` merge policy, which suppresses any merging of index segments.
 This is because merging index segments is a costly operation and not worthwhile given our query set.
+Furthermore, we are using Lucene's [Automatic Byte Quantization](https://www.elastic.co/search-labs/blog/articles/scalar-quantization-in-lucene) feature, which increase the on-disk footprint of the indexes since we're storing both the int8 quantized vectors and the float32 vectors, but only the int8 quantized vectors need to be loaded into memory.
+See [issue #2292](https://github.com/castorini/anserini/issues/2292) for some experiments reporting the performance impact.
 
 ## Retrieval
 
 Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
-The regression experiments here evaluate on the 54 topics for which NIST has provided judgments as part of the TREC 2020 Deep Learning Track.
-The original data can be found [here](https://trec.nist.gov/data/deep2020.html).
+The regression experiments here evaluate on the 43 topics for which NIST has provided judgments as part of the TREC 2019 Deep Learning Track.
+The original data can be found [here](https://trec.nist.gov/data/deep2019.html).
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
