--- a/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
@@ -53,8 +53,10 @@ ${index_cmds}
 ```
 
 The path `/path/to/${corpus}/` should point to the corpus downloaded above.
-
 Upon completion, we should have an index with 8,841,823 documents.
+
+Note that here we are explicitly using Lucene's `NoMergePolicy` merge policy, which suppresses any merging of index segments.
+This is because merging index segments is a costly operation and not worthwhile given our query set.
 
 ## Retrieval
 
