--- a/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-int8.yaml
+++ b/src/main/resources/regression/msmarco-passage-cos-dpr-distil-hnsw-int8.yaml
@@ -5,61 +5,61 @@ corpus_path: collections/msmarco/msmarco-passage-cos-dpr-distil/
 download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cos-dpr-distil.tar
 download_checksum: e20ffbc8b5e7f760af31298aefeaebbd
 
-index_path: indexes/lucene-hnsw.msmarco-passage-cos-dpr-distil/
+index_path: indexes/lucene-hnsw.msmarco-passage-cos-dpr-distil-int8/
 index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: HnswDenseVectorDocumentGenerator
 index_threads: 16
-index_options: -M 16 -efC 100 -memoryBuffer 65536 -noMerge
+index_options: -M 16 -efC 100 -memoryBuffer 65536 -noMerge -quantize.int8
 
 metrics:
   - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m map -c -l 2
+    params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: nDCG@10
+  - metric: RR@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m ndcg_cut.10 -c
+    params: -c -M 10 -m recip_rank
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m recall.100 -c -l 2
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m recall.1000 -c -l 2
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
 
-topic_reader: TsvInt
+topic_reader: JsonIntVector
 topics:
-  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
-    id: dl20
-    path: topics.dl20.txt
-    qrel: qrels.dl20-passage.txt
+  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
+    id: dev
+    path: topics.msmarco-passage.dev-subset.cos-dpr-distil.jsonl.gz
+    qrel: qrels.msmarco-passage.dev-subset.txt
 
 models:
   - name: cos-dpr-distil-hnsw
     display: cosDPR-distil
     type: hnsw
-    params: -generator VectorQueryGenerator -topicField title -threads 16 -hits 1000 -efSearch 1000 -encoder CosDprDistil
+    params: -generator VectorQueryGenerator -topicField vector -threads 16 -hits 1000 -efSearch 1000
     results:
       AP@1000:
-        - 0.482
-      nDCG@10:
-        - 0.701
+        - 0.393
+      RR@10:
+        - 0.388
       R@100:
-        - 0.712
+        - 0.903
       R@1000:
-        - 0.843
+        - 0.974
