--- a/src/main/resources/regression/msmarco-passage-hgf-wp.yaml
+++ b/src/main/resources/regression/msmarco-passage-hgf-wp.yaml
@@ -1,5 +1,5 @@
 ---
-corpus: msmarco-wp
+corpus: msmarco-passage
 corpus_path: collections/msmarco/passage
 
 index_path: indexes/lucene-index.msmarco-passage-hgf-wp/
@@ -52,7 +52,7 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25  -analyzeWithHuggingFaceTokenizer  bert-base-uncased
+    params: -bm25 -analyzeWithHuggingFaceTokenizer  bert-base-uncased
     results:
       AP@1000:
         - 0.1836
