--- a/src/main/resources/regression/backgroundlinking18.yaml
+++ b/src/main/resources/regression/backgroundlinking18.yaml
@@ -38,7 +38,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -backgroundlinking -backgroundlinking.k 100 -bm25 -hits 100
+    params: -backgroundLinking -backgroundLinking.k 100 -bm25 -hits 100
     results:
       MAP:
         - 0.2490
@@ -46,7 +46,7 @@ models:
         - 0.3293
   - name: bm25+rm3
     display: +RM3
-    params: -backgroundlinking -backgroundlinking.k 100 -bm25 -rm3 -hits 100
+    params: -backgroundLinking -backgroundLinking.k 100 -bm25 -rm3 -hits 100
     results:
       MAP:
         - 0.2661
@@ -54,7 +54,7 @@ models:
         - 0.3436
   - name: bm25+rm3+df
     display: +RM3+DF
-    params: -backgroundlinking -backgroundlinking.datefilter -backgroundlinking.k 100 -bm25 -rm3 -hits 100
+    params: -backgroundLinking -backgroundLinking.dateFilter -backgroundLinking.k 100 -bm25 -rm3 -hits 100
     results:
       MAP:
         - 0.2679
