--- a/src/main/resources/regression/mb11.yaml
+++ b/src/main/resources/regression/mb11.yaml
@@ -42,7 +42,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -searchtweets -bm25
+    params: -searchTweets -bm25
     results:
       MAP:
         - 0.3384
@@ -52,7 +52,7 @@ models:
         - 0.3316
   - name: bm25+rm3
     display: +RM3
-    params: -searchtweets -bm25 -rm3
+    params: -searchTweets -bm25 -rm3
     results:
       MAP:
         - 0.3658
@@ -62,7 +62,7 @@ models:
         - 0.3463
   - name: bm25+ax
     display: +Ax
-    params: -searchtweets -bm25 -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
+    params: -searchTweets -bm25 -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
     results:
       MAP:
         - 0.4008
@@ -72,7 +72,7 @@ models:
         - 0.3554
   - name: ql
     display: QL
-    params: -searchtweets -qld
+    params: -searchTweets -qld
     results:
       MAP:
         - 0.3584
@@ -82,7 +82,7 @@ models:
         - 0.3333
   - name: ql+rm3
     display: +RM3
-    params: -searchtweets -qld -rm3
+    params: -searchTweets -qld -rm3
     results:
       MAP:
         - 0.3961
@@ -92,7 +92,7 @@ models:
         - 0.3520
   - name: ql+ax
     display: +Ax
-    params: -searchtweets -qld -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
+    params: -searchTweets -qld -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
     results:
       MAP:
         - 0.4201
