--- a/src/main/resources/regression/mb13.yaml
+++ b/src/main/resources/regression/mb13.yaml
@@ -42,7 +42,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -searchtweets -bm25
+    params: -searchTweets -bm25
     results:
       MAP:
         - 0.2371
@@ -52,7 +52,7 @@ models:
         - 0.6212
   - name: bm25+rm3
     display: +RM3
-    params: -searchtweets -bm25 -rm3
+    params: -searchTweets -bm25 -rm3
     results:
       MAP:
         - 0.2499
@@ -62,7 +62,7 @@ models:
         - 0.6406
   - name: bm25+ax
     display: +Ax
-    params: -searchtweets -bm25 -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
+    params: -searchTweets -bm25 -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
     results:
       MAP:
         - 0.2855
@@ -72,7 +72,7 @@ models:
         - 0.6648
   - name: ql
     display: QL
-    params: -searchtweets -qld
+    params: -searchTweets -qld
     results:
       MAP:
         - 0.2602
@@ -82,7 +82,7 @@ models:
         - 0.6430
   - name: ql+rm3
     display: +RM3
-    params: -searchtweets -qld -rm3
+    params: -searchTweets -qld -rm3
     results:
       MAP:
         - 0.2878
@@ -92,7 +92,7 @@ models:
         - 0.6552
   - name: ql+ax
     display: +Ax
-    params: -searchtweets -qld -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
+    params: -searchTweets -qld -axiom -axiom.beta 1.0 -axiom.deterministic -rerankCutoff 20
     results:
       MAP:
         - 0.3152
