--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,32 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+	  <archive>
+	    <manifest>
+	      <mainClass>trec_eval</mainClass>
+	    </manifest>
+	  </archive>
+	  <descriptorRefs>
+	    <descriptorRef>jar-with-dependencies</descriptorRef>
+	  </descriptorRefs>
+          <finalName>trec_eval</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+	</configuration>
+        <executions>
+	  <execution>
+	    <id>make-assembly</id> <!-- this is used for inheritance merges -->
+	    <phase>package</phase> <!-- bind to the packaging phase -->
+	    <goals>
+	      <goal>single</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
     </plugins>
   </build>
 
