--- a/src/main/resources/regression/beir-v1.0.0-hotpotqa-bge-base-en-v1.5.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-hotpotqa-bge-base-en-v1.5.yaml
@@ -2,7 +2,7 @@
 corpus: beir-v1.0.0-bge-base-en-v1.5
 corpus_path: collections/beir-v1.0.0/bge-base-en-v1.5/hotpotqa
 
-index_path: indexes/lucene-index.beir-v1.0.0-hotpotqa-bge-base-en-v1.5/
+index_path: indexes/lucene-hnsw.beir-v1.0.0-hotpotqa-bge-base-en-v1.5/
 index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: HnswDenseVectorDocumentGenerator
