--- a/src/main/resources/docgen/templates/msmarco-passage-cohere-embed-english-v3-hnsw-int8.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-cohere-embed-english-v3-hnsw-int8.template
@@ -9,6 +9,22 @@ In these experiments, we are using pre-encoded queries (i.e., cached results of 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
 
+From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
+
+```bash
+python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
+```
+
+We make available a version of the MS MARCO Passage Corpus that has already been encoded with Cohere embed-english-v3.0.
+
+From any machine, the following command will download the corpus and perform the complete regression, end to end:
+
+```bash
+python src/main/python/run_regression.py --download --index --verify --search --regression ${test_name}
+```
+
+The `run_regression.py` script automates the following steps, but if you want to perform each step manually, simply copy/paste from the commands below and you'll obtain the same regression results.
+
 ## Corpus Download
 
 Download the corpus and unpack into `collections/`:
@@ -19,6 +35,12 @@ tar xvf collections/${corpus}.tar -C collections/
 ```
 
 To confirm, `${corpus}.tar` is 38 GB and has MD5 checksum `${download_checksum}`.
+With the corpus downloaded, the following command will perform the remaining steps below:
+
+```bash
+python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
+  --corpus-path collections/${corpus}
+```
 
 ## Indexing
 
@@ -30,6 +52,11 @@ ${index_cmds}
 
 The path `/path/to/${corpus}/` should point to the corpus downloaded above.
 Upon completion, we should have an index with 8,841,823 documents.
+
+Note that here we are explicitly using Lucene's `NoMergePolicy` merge policy, which suppresses any merging of index segments.
+This is because merging index segments is a costly operation and not worthwhile given our query set.
+Furthermore, we are using Lucene's [Automatic Byte Quantization](https://www.elastic.co/search-labs/blog/articles/scalar-quantization-in-lucene) feature, which increase the on-disk footprint of the indexes since we're storing both the int8 quantized vectors and the float32 vectors, but only the int8 quantized vectors need to be loaded into memory.
+See [issue #2292](https://github.com/castorini/anserini/issues/2292) for some experiments reporting the performance impact.
 
 ## Retrieval
 
